--- a/modules/keypad/platformio.ini
+++ b/modules/keypad/platformio.ini
@@ -8,8 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
-platform = atmelavr
-board = uno
+; [env:uno]
+; platform = atmelavr
+; board = uno
+[env:esp32-c3-devkitm-1]
+platform = espressif32
+board = esp32-c3-devkitm-1
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
