--- a/modules/timer/platformio.ini
+++ b/modules/timer/platformio.ini
@@ -12,4 +12,4 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_extra_dirs = ~/Arduino/libraries
+lib_extra_dirs = ~/Documents/Arduino/libraries
