--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -12,12 +12,13 @@ nav:
     link: /defuse-the-situation
   - name: About
     link: about
-  - name: Mechanical
-    link: mechanical
-  - name: Electrical
-    link: electrical
-  - name: Software
-    link: software
+    subitems:
+      - name: Mechanical
+        link: mechanical
+      - name: Electrical
+        link: electrical
+      - name: Software
+        link: software
   - name: Bill of Materials
     link: bom
   - name: Design
