--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,9 @@
 title: Defuse the Situation
 
 # Theme settings
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/leap-day@v0.2.0
+plugins:
+- jekyll-remote-theme
 
 # YAML Front Matter settings
 yaml_front_matter: true
